# emscripten_binding_test

./: README.md
embind/: .quick_example.html.swp  CMakeLists.txt  Makefile  binding.cpp  class.h  pass_buffer.cpp  pass_buffer.js  pass_pointer.cpp  pass_primitive_pointer.js  pass_ref.cpp  pass_ref.js  pass_vector.cpp  pass_vector.js  quick_example.cpp  quick_example.h  quick_example.html  test.html  test_class.cpp  test_class.js
include/emscripten/: .bind.h.swp  .wire.h.swp
webidl-binding/: Makefile  README.md  WebIDLGrammar.pkl  foo.cpp  foo.h  glue.cpp  glue.js  index.html  my_glue_wrapper.cpp  myclass.idl
